# ProjectCourseSyllabus

./: db.sqlite3  pyproject.toml
portafolio/: settings.py
portafolio/blog/: admin.py  apps.py  models.py
portafolio/blog/migrations/: 0001_initial.py
