[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["ZuleydisBarriosP <zuly2887@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
